UtahLiveDataTest/src/objects/AwardFINETCode__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardFINETCodeKeyFormula__c</fullName>
        <formula>ProgramCode__c + ObjectCode__c + TEXT(Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardFINETCodeKeyFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardIssueDate__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(Award__r.AwardIssueDate__c)), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)+&quot; &quot;+TEXT(DAY(DATEVALUE(Award__r.AwardIssueDate__c)))+&quot;, &quot;+TEXT(YEAR(DATEVALUE(Award__r.AwardIssueDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardIssueDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardStatus__c</fullName>
        <label>Award Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Award FINET Codes</relationshipLabel>
        <relationshipName>Award_FINET_Codes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DeltaAmount__c</fullName>
        <label>Delta Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Phase__c</fullName>
        <description>Grants API Document Phase</description>
        <label>Grants API Document Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Status__c</fullName>
        <description>Grants API Document Status</description>
        <label>Grants API Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grants_API_Document_Phase__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideAwardLetterButton__c</fullName>
        <formula>If(TEXT(Award__r.Grant__r.Program__r.AwardLetterRequired__c)==&apos;Yes&apos;,FALSE,TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAwardLetterButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramSpecificInfo__c</fullName>
        <formula>if ((Award__r.Grant__r.Program__r.ProgramSpecificText__c==null) || (LEN(Award__r.Grant__r.Program__r.ProgramSpecificText__c))==0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideProgramSpecificInfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MSPUniqueKeyFormula__c</fullName>
        <formula>Award__r.Grant__r.Program__c + Award__r.Grant__r.InternalOrganization__c + ProgramCode__r.PROG_CD__c + ObjectCode__r.OBJ_CD__c + Award__r.Grant__r.FiscalYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSPUniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectCodeText__c</fullName>
        <label>Object Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Code</label>
        <referenceTo>r_obj__c</referenceTo>
        <relationshipLabel>Award FINET Codes</relationshipLabel>
        <relationshipName>Award_FINET_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldAmount__c</fullName>
        <label>Old Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramCodeText__c</fullName>
        <label>Program Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <referenceTo>r_prog__c</referenceTo>
        <relationshipLabel>Award FINET Codes</relationshipLabel>
        <relationshipName>Award_FINET_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <formula>Amount__c - SpentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Award FINET Code</label>
    <nameField>
        <label>Award FINET Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Award FINET Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FINETProgramRemainingAmountValidation</fullName>
        <active>false</active>
        <errorConditionFormula>Amount__c &gt; ProgramCode__r.RemainingAmount__c</errorConditionFormula>
        <errorMessage>Amount cannot be greater than remaining amount in FINET program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SpentAmountLessThanTotalAmount</fullName>
        <active>true</active>
        <errorConditionFormula>SpentAmount__c &gt; Amount__c</errorConditionFormula>
        <errorMessage>Spent Amount Must be Less Than Total Amount</errorMessage>
    </validationRules>
</CustomObject>